docs: rewrite guides to be repo-centric and portable